test/regress/ext:gc/type-subtyping3.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\00\00\50\01\00\60\00\00"
  )
  "sub type"
)
